Modified "based in Houston,TX" to ensure line does not break on smaller screen sizes

--- a/client/src/screens/style/Home.css
+++ b/client/src/screens/style/Home.css
@@ -32,6 +32,12 @@
   transition: all 250ms ease-in-out;
 }
 
+@media (min-width: 992px) {
+  #home .based-in {
+    display: block;
+  }
+}
+
 @media (max-width: 992px) {
   #home .container {
     gap: 5em;
